--- a/views/test/main.ejs
+++ b/views/test/main.ejs
@@ -1,6 +1,6 @@
 <div class="main">
 	<div id="chart" class="main-chart">
-		
+
 	</div>
 	<div class="main-config">
 		<div id="chart_type"></div>
@@ -11,142 +11,4 @@
 	</div>
 </div>
 
-
-<script>
-
-var g_data = null;
-
-$(document).ready(function(){
-	prepareData();
-	bindDraw();
-	$('#draw').button().width($('.main-config').width() - 12);
-});
-
-var prepareData = function(){
-	var me = this;
-	$.ajax({
-		url:'prepareEditModel',
-		success: function(data){
-			me.buildselect('text',data.fields.Text);
-			me.buildselect('number',data.fields.Number);
-			me.buildselect('aggregates',data.aggregates);
-			buildPreviewData(data.fields.All);
-			me.addChartType();
-		}
-	});
-};
-
-var addChartType = function(){
-	var me = this;
-	var array = ['bar','line','pie','bubble'];
-	var me = this;
-	var select = me.buildselect('chart_type', array).change(function(item){
-		me.drawChartByType(g_data,item.currentTarget.value);
-	});
-};
-
-var buildselect = function(id,array){
-	var select = $('<select id="div_'+id+'">').appendTo($('#'+id+''));
-	array.forEach(function(d){
-		$('<option>'+d+'</option>').appendTo(select);
-	});
-	select.selectmenu({
-		width:$('.main-config').width() - 10
-	});
-	return select;
-};
-
-var buildPreviewData = function(fields){
-	
-};
-
-var bindDraw = function(){
-	var me = this;
-	$('#draw').click(function(){
-		me.queryData();
-	});
-};
-
-var queryData = function(){
-	var me = this;
-	var text = $('#div_text').val();
-	var number = $('#div_number').val();
-	var aggregate = $('#div_aggregates').val();
-	$.ajax({
-		url:'queryData',
-		data:{'text':text, 'number':number, 'aggregate':aggregate},
-		success: function(data){
-			me.drawChart(data);
-			g_data = data;
-		}
-	});
-};
-
-var drawChart = function(data){
-	var me = this;
-	var type = $('#div_chart_type').val();
-	me.drawChartByType(data,type);
-};
-
-var drawChartByType = function(data,type){
-	var me = this;
-	switch(type){
-		case 'bar':
-		case 'line':
-			me.drawBarLineChart(data,type);
-			break;
-		case 'pie':
-			me.drawPieChart(data);
-			break;
-		case 'bubble':
-			me.drawBubbleChart(data);
-			break;
-		default:
-			console.log('not supported chart');
-	}
-};
-
-var drawBarLineChart = function(data,type){
-	var d = [
-		{
-			x: data.x,
-			y: data.y,
-			type: type
-		}
-	];
-	Plotly.newPlot('chart', d);
-};
-
-var drawPieChart = function(data){
-	var data = [{
-	  values: data.y,
-	  labels: data.x,
-	  type: 'pie'
-	}];
-	var layout = {
-	};
-	Plotly.newPlot('chart', data, layout);
-};
-
-var drawBubbleChart = function(d){
-	var trace1 = {
-	  x: d.x,
-	  y: d.y,
-	  mode: 'markers',
-	  marker: {
-		size: d.y
-	  }
-	};
-
-	var data = [trace1];
-
-	var layout = {
-	  title: '',
-	  showlegend: false
-	};
-
-	Plotly.newPlot('chart', data, layout);
-}
-
-
-</script>
+<script data-main="/js/main.js" src="/js/dependencies/require.js"></script>
