--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,7 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/dashboard.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/jquery-ui.css">
     <link rel="stylesheet" href="/styles/jquery-ui.structure.css">
