--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="/styles/jquery-ui.theme.css">
     <link rel="stylesheet" href="/styles/main.css">
     <!--STYLES END-->
+    <link rel="stylesheet" href="/css/bootstrap.css">
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
